# paddlenlp-test

./: main.py  pyproject.toml  readme.md  requirements.txt  resp.py  训练.md
